<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activities.FightActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_fight_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hapticFeedbackEnabled="true"
        android:padding="10dp"
        android:text="@string/automatic_mode"
        app:cornerRadius="@dimen/cornerRadius"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:thumbTint="?colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shoot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/shoot"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystick_left"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:JV_backgroundColor="#009688"
        app:JV_borderColor="#00796B"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#FF6E40"
        app:JV_buttonSizeRatio="30%"
        app:JV_fixedCenter="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystick_right"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:JV_backgroundColor="#009688"
        app:JV_borderColor="#00796B"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#FF6E40"
        app:JV_buttonSizeRatio="30%"
        app:JV_fixedCenter="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/foramt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/match_format"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/team_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <WebView
        android:id="@+id/web_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/joystick_right"
        app:layout_constraintStart_toEndOf="@+id/switch_fight_mode"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>